# LifeGraph

./: .env.example  .env.portainer  .gitignore  LICENSE  PRD.md  README.md  TASKS.md  docker-compose.portainer.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/apps/: __init__.py
backend/apps/core/: __init__.py  adapters.py  admin.py  apps.py  encryption.py  mfa.py  models.py  ratelimit.py  serializers.py  urls.py  validators.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/people/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/people/migrations/: 0001_initial.py  0002_fix_encrypted_field_types.py  0002_split_name_fields.py  0003_add_is_owner_field.py  0004_encrypt_sensitive_fields.py  0005_alter_person_ai_summary_alter_person_discord_id_and_more.py  0006_alter_employment_description_and_more.py
backend/apps/people/services/: __init__.py  ai_parser.py  export.py  linkedin.py
backend/lifegraph/: asgi.py  celery.py  urls.py  wsgi.py
backend/lifegraph/settings/: __init__.py  base.py  development.py  production.py  test.py
backend/templates/account/: login.html  logout.html
backend/tests/: conftest.py  factories.py
backend/tests/core/: test_encryption.py  test_models.py  test_ratelimit.py  test_serializers.py  test_views.py
backend/tests/people/: test_signals.py  test_tasks.py  test_workflows.py
e2e/: .gitignore  (+6 more)
(+129 files in other folders)
